[package]
name = "all_days"
version = "0.1.0"
authors = ["Simon Castle <simon.castle@metaswitch.com>"]
edition = "2018"
publish = ["metaswitch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array_tool = "1.0.3"
extended-rational = "1.3.3"
enum-iterator = "0.6.0"
itertools = "0.10.5"